--- a/scraps/Makefile
+++ b/scraps/Makefile
@@ -3,7 +3,7 @@ ME:=  $(patsubst %.cpp,%.o,$(wildcard *.cpp))
 all:$(FILENAME)
 
 %.o : %.cpp
-	g++  $< -o $@;
+	g++ $< -o $@ -std=c++11;
 
 % : %.o
 	./$@.o;
