--- a/ftoc/Makefile
+++ b/ftoc/Makefile
@@ -1,10 +1,13 @@
 FLAGS = -Wall -Wextra -O3
 
-default: ftoc.o
+default: ftoc
+
+ftoc: ftoc.o main.c
+	gcc main.c ftoc.o $(FLAGS) -o ftoc 
 
 ftoc.o: ftoc.c ftoc.h
-	gcc ftoc.c $(FLAGS) -shared -fpic -o ftoc.o
+	gcc ftoc.c $(FLAGS) -c -o ftoc.o
 
 .PHONY: clean
 clean: 
-	rm -f *.o 
+	rm -f ftoc ftoc.o
